--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pong Leaderboard</title>
+    <title>Pong Leaderboard </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,59 +19,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="rank-1">
-                    <td class="rank">1st</td>
-                    <td class="points">99,990</td>
-                    <td class="name">ACE</td>
-                </tr>
-                <tr class="rank-2">
-                    <td class="rank">2nd</td>
-                    <td class="points">85,500</td>
-                    <td class="name">Jax</td>
-                </tr>
-                <tr class="rank-3">
-                    <td class="rank">3rd</td>
-                    <td class="points">72,150</td>
-                    <td class="name">LUC</td>
-                </tr>
-                <tr>
-                    <td class="rank">4th</td>
-                    <td class="points">60,300</td>
-                    <td class="name">KYL</td>
-                </tr>
-                <tr>
-                    <td class="rank">5th</td>
-                    <td class="points">55,010</td>
-                    <td class="name">Ryu</td>
-                </tr>
-                <tr>
-                    <td class="rank">6th</td>
-                    <td class="points">49,880</td>
-                    <td class="name">Zen</td>
-                </tr>
-                <tr>
-                    <td class="rank">7th</td>
-                    <td class="points">42,000</td>
-                    <td class="name">Mia</td>
-                </tr>
-                <tr>
-                    <td class="rank">8th</td>
-                    <td class="points">38,750</td>
-                    <td class="name">T3o</td>
-                </tr>
-                <tr>
-                    <td class="rank">9th</td>
-                    <td class="points">35,100</td>
-                    <td class="name">Ali</td>
-                </tr>
-                <tr>
-                    <td class="rank">10th</td>
-                    <td class="points">29,999</td>
-                    <td class="name">D4V</td>
-                </tr>
-            </tbody>
+                </tbody>
         </table>
     </div>
 
+    <script src="script.js"></script> 
 </body>
 </html>
